Playing with git reset

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="audience">
-      <img src="https://i.redd.it/kgngwru2pql71.jpg" alt="Audience" />
+      <img src="https://live.staticflickr.com/8221/8384190878_ce737e8848_b.jpg" alt="Audience" />
       <div class="basketball-court">
         <div id="ball"></div> 
         <div class="court-line"></div>
